@@ -56,6 +56,7 @@ version <next>:
 - ahistogram filter
 - only seek with the right mouse button in ffplay
 - toggle full screen when double-clicking with the left mouse button in ffplay
+- afftfilt filter
 
 
 version 2.8:
